--- a/BloodlineDNATestingServiceManagementSystem/BloodlineDNATestingServiceManagementSystem.csproj
+++ b/BloodlineDNATestingServiceManagementSystem/BloodlineDNATestingServiceManagementSystem.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\BLL\BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
