--- a/BloodlineDNATestingServiceManagementSystem/BloodlineDNATestingServiceManagementSystem.csproj
+++ b/BloodlineDNATestingServiceManagementSystem/BloodlineDNATestingServiceManagementSystem.csproj
@@ -18,4 +18,11 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
