--- a/BloodlineDNATestingServiceManagementSystem/appsettings.json
+++ b/BloodlineDNATestingServiceManagementSystem/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "server=(local); database=DNATestingService; uid=sa; pwd=1234567890; TrustServerCertificate=True; Trusted_Connection=True;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server= ASUS\\SQLEXPRESS; database=DNATestingService; uid=sa; pwd=123; TrustServerCertificate=True; Trusted_Connection=True;"
+    }
 }
